--- a/chips/Cargo.toml
+++ b/chips/Cargo.toml
@@ -20,6 +20,8 @@ afs-derive = { path = "../derive" }
 afs-test-utils = { path = "../test-utils" }
 parking_lot = "0.12.2"
 tracing = "0.1.40"
+serde_json = "1.0.117"
+serde = "1.0.203"
 
 [dev-dependencies]
 p3-uni-stark = { workspace = true }
