--- a/chips/Cargo.toml
+++ b/chips/Cargo.toml
@@ -28,6 +28,7 @@ itertools = "0.13.0"
 getset = "0.1.2"
 serde = "1.0.203"
 serde_json = "1.0.117"
+bincode = "1.3.3"
 
 [dev-dependencies]
 p3-uni-stark = { workspace = true }
