--- a/operators/Cargo.toml
+++ b/operators/Cargo.toml
@@ -19,6 +19,8 @@ p3-util = { workspace = true }
 p3-uni-stark = { workspace = true }
 rand = "0.8"
 derive-new = "0.5"
+bincode = "1.3.3"
+
 
 afs-stark-backend = { path = "../stark-backend" }
 afs-chips = { path = "../chips" }
