--- a/.github/workflows/bench-rw.yml
+++ b/.github/workflows/bench-rw.yml
@@ -75,6 +75,20 @@ jobs:
           mkdir -p benchmark/github/results
           mv benchmark/tmp/_result.json benchmark/github/results/single_rw.json
           echo "::set-output name=new-benchmark::$(cat benchmark/github/results/single_rw.json)"
+      
+      - name: Remove previous comment (if exists)
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const comments = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number
+            });
+            for (const comment of comments.data) {
+              console.log(comment.body);
+            }
 
       - name: Add comment to pull request
         if: github.event_name == 'pull_request'
