feat: add m31 circle-stark engine with `Sha256Compress`

--- a/test-utils/Cargo.toml
+++ b/test-utils/Cargo.toml
@@ -7,9 +7,11 @@ edition.workspace = true
 [dependencies]
 p3-air = { workspace = true }
 p3-challenger = { workspace = true }
+p3-circle = { workspace = true }
 p3-commit = { workspace = true }
 p3-field = { workspace = true }
 p3-matrix = { workspace = true }
+p3-mersenne-31 = { workspace = true }
 p3-uni-stark = { workspace = true }
 p3-util = { workspace = true }
 p3-dft = { workspace = true }
