--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ lto = "thin"
 p3-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b382e04" } # branch "fix/two_adic_pcs_verify_height1" until issue fixed
 p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b382e04" }
 p3-commit = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b382e04" }
+p3-circle = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b382e04" }
 p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b382e04" }
 p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", features = [
     "nightly-features",
@@ -77,6 +78,7 @@ p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b382e04
 p3-blake3 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b382e04" }
 p3-mds = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b382e04" }
 p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b382e04" }
+p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b382e04" }
 p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b382e04" }
 p3-poseidon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b382e04" }
 p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b382e04" }
