--- a/bin/afs/Cargo.toml
+++ b/bin/afs/Cargo.toml
@@ -16,14 +16,14 @@ p3-util = { workspace = true }
 afs-stark-backend = { path = "../../stark-backend", default-features = false }
 afs-derive = { path = "../../derive" }
 afs-primitives = { path = "../../primitives", default-features = false }
-afs-test-utils = { path = "../../test-utils" }
+afs-test-utils = { path = "../../test-utils", features = ["sha256"] }
 afs-page = { path = "../../db/page", default-features = false }
 bin-common = { path = "../common" }
 p3-uni-stark = { workspace = true }
 p3-field = { workspace = true }
 p3-blake3 = { workspace = true }
 p3-keccak = { workspace = true }
-p3-maybe-rayon = { workspace = true } # the "parallel" feature is NOT on by default to allow single-threaded benchmarking
+p3-maybe-rayon = { workspace = true }                                          # the "parallel" feature is NOT on by default to allow single-threaded benchmarking
 
 tracing = "0.1.37"
 
