Revert "chore: trigger bench workflow"
This reverts commit 171c442588ce63745ff9a413cd7f92ee5128799a.

--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -5,10 +5,10 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-    # paths:
-    #   - "stark-backend/**"
-    #   - "primitives/**"
-    #   - "db/**"
+    paths:
+      - "stark-backend/**"
+      - "primitives/**"
+      - "db/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
