Turn off filter for draft

--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -37,11 +37,9 @@ jobs:
 
   benchmark-rw:
     uses: ./.github/workflows/benchmark-call.yml
-    # run on non-draft pull request with label 'run-benchmark'
-    # and always run on push to main
+    # run on pull request with label 'run-benchmark' and always run on push to main
     if: |
       (github.event_name == 'pull_request' &&
-      github.event.pull_request.draft == false &&
       contains(github.event.pull_request.labels.*.name, 'run-benchmark')) ||
       (github.event_name == 'push' && github.ref == 'refs/heads/main')
     with:
@@ -50,11 +48,9 @@ jobs:
 
   benchmark-filter:
     uses: ./.github/workflows/benchmark-call.yml
-    # run on non-draft pull request with label 'run-benchmark'
-    # and always run on push to main
+    # run on pull request with label 'run-benchmark' and always run on push to main
     if: |
       (github.event_name == 'pull_request' &&
-      github.event.pull_request.draft == false &&
       contains(github.event.pull_request.labels.*.name, 'run-benchmark')) ||
       (github.event_name == 'push' && github.ref == 'refs/heads/main')
     with:
