--- a/.github/workflows/recursion-bench.yml
+++ b/.github/workflows/recursion-bench.yml
@@ -26,8 +26,7 @@ env:
 jobs:
   benchmark:
     uses: ./.github/workflows/benchmark-call.yml
-    # run on pull request with label 'run-benchmark'
-    # and always run on push to main
+    # run on pull request with label 'run-benchmark' and always run on push to main
     if: |
       (github.event_name == 'pull_request' &&
       contains(github.event.pull_request.labels.*.name, 'run-benchmark')) ||
@@ -38,8 +37,7 @@ jobs:
 
   benchmark_static:
     uses: ./.github/workflows/benchmark-call.yml
-    # run on pull request with label 'run-benchmark-e2e'
-    # and always run on push to main
+    # run on pull request with label 'run-benchmark-e2e' and always run on push to main
     if: |
       (github.event_name == 'pull_request' &&
       contains(github.event.pull_request.labels.*.name, 'run-benchmark-e2e')) ||
@@ -50,8 +48,7 @@ jobs:
 
   benchmark_tiny_e2e:
     uses: ./.github/workflows/benchmark-call.yml
-    # run on pull request with label 'run-benchmark' or 'run-benchmark-e2e'
-    # and always run on push to main
+    # run on pull request with label 'run-benchmark' or 'run-benchmark-e2e' and always run on push to main
     # only run-benchmark-e2e will run halo2 verifier
     if: |
       (github.event_name == 'pull_request' &&
@@ -65,8 +62,7 @@ jobs:
 
   benchmark_small_e2e:
     uses: ./.github/workflows/benchmark-call.yml
-    # run on non-draft pull request with label 'run-benchmark'
-    # and always run on push to main
+    # run on pull request with label 'run-benchmark' and always run on push to main
     if: |
       (github.event_name == 'pull_request' &&
       (contains(github.event.pull_request.labels.*.name, 'run-benchmark') ||
