--- a/ecc/execution/Cargo.toml
+++ b/ecc/execution/Cargo.toml
@@ -5,8 +5,8 @@ authors.workspace = true
 edition.workspace = true
 
 [dependencies]
-ff = "0.13.0"
 halo2curves-axiom = "0.7.0"
+itertools.workspace = true
 
 [dev-dependencies]
 rand.workspace = true
