--- a/ecc/execution/Cargo.toml
+++ b/ecc/execution/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 [dependencies]
 halo2curves-axiom = "0.7.0"
 itertools.workspace = true
+rand_core = "0.6.4"
 
 [dev-dependencies]
 rand.workspace = true
