--- a/ecc/primitives/Cargo.toml
+++ b/ecc/primitives/Cargo.toml
@@ -25,6 +25,7 @@ p3-merkle-tree = { workspace = true }
 p3-poseidon2 = { workspace = true }
 p3-uni-stark = { workspace = true }
 itertools.workspace = true
+halo2curves-axiom = { path = "../../../halo2curves" }
 
 rand.workspace = true
 num-bigint-dig.workspace = true
