--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 title: afs-prototype
 markdown: CommonMarkGhPages
+commonmark:
+  options: ["UNSAFE", "SMART", "FOOTNOTES"]
+  extensions: ["strikethrough", "autolink", "table", "tagfilter"]
