--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -30,7 +30,7 @@ jobs:
         run: cargo install cargo-llvm-cov          
 
       - name: Run coverage
-        run: RUST_MIN_STACK=8388608 cargo llvm-cov --json --output-path=coverage --profile=release --features parallel
+        run: RUST_MIN_STACK=8388608 cargo llvm-cov --json --output-path=coverage --jobs $(nproc)--profile=release --features parallel
 
       - name: Parse detailed coverage report
         id: parse
