fix: speed up coverage

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -30,7 +30,10 @@ jobs:
         run: cargo install cargo-llvm-cov          
 
       - name: Run coverage
-        run: RUST_MIN_STACK=8388608 AXIOM_FAST_TEST=1 cargo llvm-cov --json --output-path=coverage --jobs $(nproc) --profile=fast --features parallel
+        run: RUST_MIN_STACK=8388608 AXIOM_FAST_TEST=1 cargo llvm-cov --json --output-path=coverage --jobs $(nproc) --profile=fast --features parallel --ignore-filename-regex 'tests|examples' --no-report
+
+      - name: Generate report
+        run: cargo llvm-cov --json --output-path coverage/
 
       - name: Parse detailed coverage report
         id: parse
