--- a/toolchain/riscv/axvm/Cargo.toml
+++ b/toolchain/riscv/axvm/Cargo.toml
@@ -10,6 +10,10 @@ repository = { workspace = true }
 [dependencies]
 axvm-platform = { workspace = true, features = ["rust-runtime"] }
 serde = { workspace = true, features = ["alloc", "derive"] }
+hex-literal.workspace = true
+num-bigint-dig.workspace = true
+num-traits.workspace = true
+once_cell.workspace = true
 tiny-keccak.workspace = true
 
 [dev-dependencies]
