fix: fix Cargo.toml files

--- a/toolchain/riscv/axvm/Cargo.toml
+++ b/toolchain/riscv/axvm/Cargo.toml
@@ -11,9 +11,8 @@ repository = { workspace = true }
 axvm-platform = { workspace = true, features = ["rust-runtime"] }
 serde = { workspace = true, features = ["alloc", "derive"] }
 hex-literal.workspace = true
-num-bigint-dig.workspace = true
-num-traits.workspace = true
-once_cell.workspace = true
+num-bigint-dig = { version = "0.8.4", default-features = false }
+num-traits = { version = "0.2.19", default-features = false }
 tiny-keccak.workspace = true
 
 [dev-dependencies]
