refactor: restructured the ax-hashes library to add sha256

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
     "stark-backend",
     "stark-sdk",
     "circuits/ecc",
-    "circuits/hashes/poseidon2-air",
+    "circuits/hashes",
     "circuits/primitives",
     "circuits/derive",
     "vm",
@@ -91,7 +91,7 @@ axvm-moduli-setup = { path = "toolchain/riscv/macros/moduli-setup", default-feat
 axvm-sw-setup = { path = "toolchain/riscv/macros/sw-setup", default-features = false }
 axvm-circuit = { path = "vm", default-features = false }
 axvm-circuit-derive = { path = "vm/derive", default-features = false }
-ax-poseidon2-air = { path = "circuits/hashes/poseidon2-air", default-features = false }
+ax-hashes = { path = "circuits/hashes", default-features = false }
 ax-ecc-execution = { path = "lib/ecc-execution", default-features = false }
 ax-ecc-primitives = { path = "circuits/ecc", default-features = false }
 ax-circuit-primitives = { path = "circuits/primitives", default-features = false }
