--- a/vm/Cargo.toml
+++ b/vm/Cargo.toml
@@ -15,7 +15,7 @@ p3-maybe-rayon = { workspace = true }
 p3-symmetric = { workspace = true }
 p3-util = { workspace = true }
 
-ax-poseidon2-air = { workspace = true }
+ax-hashes = { workspace = true }
 ax-stark-backend = { workspace = true }
 ax-circuit-primitives = { workspace = true }
 ax-circuit-derive = { workspace = true }
