--- a/axiom-vm/Cargo.toml
+++ b/axiom-vm/Cargo.toml
@@ -21,7 +21,7 @@ static_assertions.workspace = true
 async-trait.workspace = true
 
 [features]
-default = ["parallel"]
+default = ["parallel", "static-verifier"]
 static-verifier = ["axvm-recursion/static-verifier"]
 parallel = ["axvm-circuit/parallel"]
 test-utils = ["axvm-circuit/test-utils"]
