--- a/Cargo.toml
+++ b/Cargo.toml
@@ -167,6 +167,7 @@ async-trait = "0.1.83"
 
 # cryptography, default-features = false for no_std
 tiny-keccak = { version = "2.0.2", features = ["keccak"] }
+sha2 = { version = "0.10", default-features = false }
 k256 = { version = "0.13.3", default-features = false }
 elliptic-curve = { version = "0.13.8", default-features = false }
 ecdsa = { version = "0.16.9", default-features = false }
