--- a/vm/Cargo.toml
+++ b/vm/Cargo.toml
@@ -33,6 +33,7 @@ parking_lot.workspace = true
 enum-utils.workspace = true
 strum.workspace = true
 tiny-keccak.workspace = true
+sha2.workspace = true
 num-bigint-dig = { workspace = true, features = ["std"] }
 num-traits.workspace = true
 enum_dispatch.workspace = true
