add root proot to cli; enable LongForm transpiling by default

--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -23,6 +23,7 @@ openvm-pairing-circuit = { workspace = true }
 openvm-pairing-transpiler = { workspace = true }
 openvm-native-circuit = { workspace = true }
 openvm-native-compiler = { workspace = true }
+openvm-native-transpiler = { workspace = true }
 openvm-native-recursion = { workspace = true, features = ["static-verifier"] }
 openvm-rv32im-circuit = { workspace = true }
 openvm-rv32im-transpiler = { workspace = true }
